--- a/style.css
+++ b/style.css
@@ -1,6 +1,11 @@
 /* Base styles */
-.global {
+body {
     background-color: #241e1e;
+    display: flex;
+    justify-content: space-between;
+    align-content: space-between;
+    align-items: center;
+    flex-direction: column;
 }
 
 * {
@@ -10,7 +15,11 @@
   }
   
   .flex-container {
-    border: 1px solid #7f00ff;
+    display: flex;
+    width: 80%;
+    justify-content: center;
+    flex-direction: column;
+
   }
   
   .flex-item {
@@ -19,7 +28,12 @@
     color: #fff;
     text-align: center;
     text-shadow: 4px 2px 0 rgba(0, 0, 0, 0.2);
+    margin: 5px;
+    flex-grow: 1;
+
+    
   }
+
   
   .item-1 {
     background: #2e2a2a;
@@ -27,13 +41,14 @@
   }
 
   .item-11 {
-    border: 1px solid #e0e0e0;
+    text-align: right;
+    width: 100px;
     
   }
   .item-12 {
-    border: 1px solid #e0e0e0;
     flex-grow: 3;
     width: 60%;
+    text-align: left;
   }
   
   .item-2 {
@@ -157,15 +172,6 @@
   
   
   /* Custom styles */
-  .flex-container {
-    display: flex;
-    flex-direction: column;
-  }
 
-  .flex-item {
-    width: calc(100%-5px);
-    margin: 5px;
-    flex-grow: 1;
-  }
 
   
